--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "The api that powers the Crafters Castia Utils mod",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "ts-node src/index.ts",
+    "build": "tsc"
   },
   "keywords": [
     "minecraft",
@@ -13,6 +14,7 @@
   "author": "Crafter-Y",
   "license": "UNLICENSED",
   "devDependencies": {
+    "@types/express": "^5.0.0",
     "@types/node": "^22.7.4",
     "prisma": "^5.20.0",
     "ts-node": "^10.9.2",
