--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "The api that powers the Crafters Castia Utils mod",
   "scripts": {
-    "dev": "ts-node src/index.ts",
+    "dev": "npm run generate && nodemon ./src/index.ts",
     "generate": "prisma generate && prisma migrate deploy",
     "build": "tsc"
   },
@@ -15,14 +15,15 @@
   "author": "Crafter-Y",
   "license": "UNLICENSED",
   "devDependencies": {
-    "@types/express": "^5.0.0",
+    "@types/express": "^4.17.17",
     "@types/node": "^22.7.4",
-    "prisma": "^5.20.0",
+    "nodemon": "^3.1.7",
+    "prisma": "^5.21.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   },
   "dependencies": {
-    "@prisma/client": "^5.20.0",
-    "express": "^4.21.0"
+    "@prisma/client": "^5.21.1",
+    "express": "^4.18.2"
   }
 }
