--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Crafter-Y",
   "license": "UNLICENSED",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.17",
     "@types/node": "^22.7.4",
     "nodemon": "^3.1.7",
@@ -24,6 +25,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.21.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2"
   }
 }
