--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@prisma/client": "^5.21.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mathjs": "^13.2.0"
+    "mathjs": "^13.2.0",
+    "zod": "^3.23.8"
   }
 }
